--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">android_kotlin_template</string>
+    <string name="main_bottom_home">홈</string>
+    <string name="main_bottom_my_page">나의설정</string>
 </resources>
